# dagent

./: .gitignore  LICENSE  README.md  deep-research-report.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  Đánh giá dự án Dagent.md
.github/workflows/: ci.yml
benchmarks/: internal_benchmark.json
docs/architecture/: 0001-local-first-control-plane.md
engine/agent_engine/: agent_contracts.py  agent_memory.py  autonomy.py  broker.py  claude_adapter.py  claude_code_worker.py  container_sandbox.py  debug_log.py  deterministic_workflow.py  durable_execution.py  evaluation.py  graph.py  idea_council.py  llm_client.py  long_term_memory.py  multi_agent.py  openhands_worker.py  project_scaffold.py  prompt_templates.py  run.py  self_improvement.py  server.py  state_store.py  telemetry.py  workspace.py  worktree_manager.py
scripts/: compile-python.js  run-evaluation.js  run-tests.js
skills/taste/: SKILL.md
src/main/: appDatabase.js  backendService.js  main.js  preload.js  pythonEngine.js  pythonRuntime.js  sessionStore.js  (+1 more)
tests/: conftest.py  test_a2a_protocol.py  test_autonomy.py  test_autonomy_next_task.py  test_broker.py  test_debug_log.py  test_deterministic_workflow.py  test_durable_execution.py  test_electron_hardening.py  test_evaluation.py  test_graph_normalization.py  test_idea_council.py  test_llm_client.py  test_long_term_memory.py  test_openhands_worker_cleanup.py  test_package_manager_config.py  test_phase2_approval_flow.py  test_server.py  test_state_store.py  test_workspace_policy.py  test_worktree_container_security.py
(+13 files in other folders)
