[project]
name = "hethongagent-engine"
version = "0.1.0"
description = "LangGraph + OpenHands coding-agent engine for He Thong Agent."
requires-python = ">=3.12"
dependencies = [
  "jinja2>=3.1.6",
  "langgraph>=1.2.5",
  "langgraph-checkpoint-sqlite>=3.1.0",
  "opentelemetry-api>=1.39.0",
  "opentelemetry-sdk>=1.39.0",
  "opentelemetry-exporter-otlp>=1.39.0",
  "openhands-sdk>=1.28.1",
  "openhands-tools>=1.28.1",
  "pyyaml>=6.0.3",
]

[tool.uv]
package = false
